# job-hunter

./: .env  .env.example  .gitignore  CLAUDE.md  README  README.md  docker-compose.yml  job-hunter.code-workspace  setup.sh  start.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_job_applications_table.py  0003_create_resumes_table.py  0004_create_work_experiences_table.py  0005_create_educations_table.py  0006_create_skills_table.py
backend/app/: config.py  dependencies.py  main.py  security.py
backend/app/models/: __init__.py  application.py  resume.py  user.py
backend/app/routers/: applications.py  auth.py  resumes.py
backend/app/schemas/: application.py  resume.py  user.py
backend/migrations/: 1777736318339_init-users.js
backend/src/: app.ts  dependencies.ts  settings.ts
backend/src/controllers/: account.controller.test.ts  account.controller.ts
backend/src/controllers/accounts/: account.controller.test.ts  account.controller.ts
backend/src/db/: postgresql.client.ts
backend/src/domains/accounts/: account.controller.test.ts  account.service.test.ts  account.service.ts
backend/src/domains/auth/: auth.controller.ts  auth.repository.ts  (+2 more)
backend/src/repositories/: account.repository.ts
backend/src/types/: account.type.ts
backend/src/validation/: auth.validation.ts
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_resumes.py
(+110 files in other folders)
